syntax = "proto3";

package pbcredential;

option go_package = "bscp.io/pkg/protocol/core/credential;pbcredential";

message CredentialList {
  uint32                id         = 1;
  CredentialSpec        spec       = 2;
  CredentialAttachment  attachment = 3;
  CredentialRevision    revision   = 4;
}

message CredentialSpec {
  string credential_type = 1;
  string enc_credential  = 2;
  string enc_algorithm   = 3;
  string memo            = 4 ;
  bool   enable            = 5;
}

message CredentialAttachment {
  uint32 biz_id = 1;
}

message CredentialRevision {
  string creator    = 1;
  string reviser    = 2;
  string create_at  = 3;
  string update_at  = 4;
  string expired_at = 5;
}

message CredentialScope {
  string scope = 1;
}
