syntax = "proto3";

import "bscp.io/pkg/protocol/core/base/base.proto";

package pbts;

option go_package = "bscp.io/pkg/protocol/core/template-space;pbts";

// TemplateSpace source resource reference: pkg/dal/table/template_space.go
message TemplateSpace {
    uint32                  id         = 1;
    TemplateSpaceSpec       spec       = 2;
    TemplateSpaceAttachment attachment = 3;
    pbbase.Revision         revision   = 4;
}

// TemplateSpaceSpec source resource reference: pkg/dal/table/template_space.go
message TemplateSpaceSpec {
    string name = 1;
    string memo = 2;
}

// TemplateSpaceAttachment source resource reference: pkg/dal/table/template_space.go
message TemplateSpaceAttachment {
    uint32 biz_id = 1;
}
